--- a/.mergify.yml
+++ b/.mergify.yml
@@ -6,7 +6,7 @@ pull_request_rules:
     actions:
       merge:
         method: rebase
-        strict: true
+        strict: false
   - name: remove automerge label on CI failure
     conditions:
       - status-failure=continuous-integration/travis-ci/pr
